# lather

./: .gitignore  BoundingShape.cpp  BoundingShape.h  CMakeLists.txt  Point.cpp  Point.h  boundingshape.cpp  boundingshape.hpp  compute_bisector.cpp  compute_bisector.hpp  config.cfg  display.cpp  fitrv.cpp  fitrv.hpp  fitsim.cpp  fitsim.hpp  g2013.txt  lather.cpp  makefile  observing_strategies.py  planck.hpp  point.cpp  point.hpp  profile.cpp  profile.hpp  python_interface.cpp  script.py  setup.py  simulation.cpp  simulation.hpp  spot.cpp  spot.hpp  star.cpp  star.hpp  sun_model.py  test.sh
resources/: solarccfhires.txt  solarccflores.txt
